Hack to keep the directory permissions.

BUG: 83617

svn path=/branches/stable/extragear/multimedia/k3b/; revision=471873